add token login

--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
 
     <title>Github & hash based SPA</title>
 
-    <script src="github.js"></script>
-    <script src="hashSPA.js"></script>
-    <script src="snarkdown.js"></script>
-
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="skeleton.css">
     <link rel="stylesheet" href="home.css">
@@ -22,7 +18,7 @@
     <nav id="nav">
         <a href="#filePage">Files</a>
         <a href="#searchPage">Github</a>
-        <a href="#loginPage">Login</a>
+        <a href="#basicAuthPage">Login</a>
     </nav>
     <main id="main">
     </main>
@@ -31,6 +27,9 @@
     </footer>
 
     <script src="home.js"></script>
+    <script src="github.js"></script>
+    <script src="hashSPA.js"></script>
+    <script src="snarkdown.js"></script>
     <script src="../password.js"></script>
 </body>
 
